[project]
name = "rag-assignment-3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.11",
    "langchain-text-splitters>=1.1.1",
    "openai>=2.29.0",
    "pinecone>=8.1.0",
    "pypdf>=6.9.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "tavily-python>=0.7.23",
    "tiktoken>=0.12.0",
]
